--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,8 @@
       }
 
       .body-content {
-        padding-left: 10px;
+        padding-left: 5%;
+        padding-right: 5%;
       }
       
       /* Set black background color, white text and some padding */
@@ -83,7 +84,7 @@
     </header>
     <div class="container-fluid">
       <div class="row content">
-        <div class="col-sm-12 body-content">
+        <div class="col-sm-10 body-content">
           {{ content }}
         </div>
       </div>
