--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,8 +55,12 @@
       }
 
       .body-content {
-        padding-left: 5%;
-        padding-right: 5%;
+        margin-left: 5%;
+        margin-right: 5%;
+      }
+
+      .body-video {
+        margin-left: 33%
       }
       
       /* Set black background color, white text and some padding */
