--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,6 +62,11 @@
       .body-video {
         margin-left: 33%
       }
+
+      .body-quated-text {
+        font-style: italic;
+        color: gray;
+      }
       
       /* Set black background color, white text and some padding */
       footer {
