--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,6 +67,10 @@
         font-style: italic;
         color: gray;
       }
+
+      .body-image-row {
+        background-color: gainsboro;
+      }
       
       /* Set black background color, white text and some padding */
       footer {
