--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,6 +70,11 @@
 
       .body-image-row {
         background-color: gainsboro;
+        padding: 10px;
+      }
+      
+      .body-image-title {
+        font-size: large;
       }
       
       /* Set black background color, white text and some padding */
