--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
       }
 
       .header-banner {
-        padding: 15px;
+        margin-left: 33%
         height: auto;
         max-width: 767px;
       }
