--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,8 +96,8 @@
   <body>
     <header class="container-fluid">
       <!-- <img src="../assets/HeaderBanner.jpg" class="header-banner"> -->
-       <h1 class="header-title">Concept Welder</h1>
-       <h5 class="header-sub-title">"When the pupil is ready the teacher appears"</h5>
+       <h1 class="header-title"><a href="http://conceptwelder.com/">Concept Welder</a></h1>
+       <h5 class="header-sub-title">"Where new ideas are forged and brought to life"</h5>
     </header>
     <div class="container-fluid">
       <div class="row content">
