--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,8 @@
       }
 
       .body-video {
-        margin-left: 33%
+        display: flex;
+        justify-content: center;
       }
 
       .body-quated-text {
