--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,6 +71,8 @@
       .body-image-row {
         background-color: gainsboro;
         padding: 10px;
+        margin-top: 25px;
+        margin-bottom: 25px;
       }
       
       .body-image-title {
