--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,6 +71,9 @@
       .body-image-row {
         background-color: gainsboro;
         padding: 10px;
+      }
+
+      .body-image-wrapper {
         margin-top: 25px;
         margin-bottom: 25px;
       }
