--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,6 +81,11 @@
       .body-image-title {
         font-size: large;
       }
+
+      .body-image {
+        max-height: fit-content;
+        padding: 10px;
+      }
       
       /* Set black background color, white text and some padding */
       footer {
