--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,6 +73,12 @@
         padding: 10px;
       }
 
+      .body-image-container {
+        background-color: gainsboro;
+        display: flex;
+        justify-content: center;
+      }
+
       .body-image-wrapper {
         margin-top: 25px;
         margin-bottom: 25px;
