--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,6 +66,9 @@
       .body-quated-text {
         font-style: italic;
         color: gray;
+        display: flex;
+        justify-content: center;
+        padding: 5px;
       }
 
       .body-image-row {
