--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,6 +69,7 @@
         display: flex;
         justify-content: center;
         padding: 5px;
+        max-width: 25%
       }
 
       .body-image-row {
