--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,7 @@
         text-align: center;
         margin-top: 25px;
         margin-bottom: 25px;
+        color: white;
       }
 
       .header-sub-title {
