--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -117,7 +117,7 @@
   <body>
     <header class="container-fluid">
       <!-- <img src="../assets/HeaderBanner.jpg" class="header-banner"> -->
-       <h1 class="header-title"><a href="http://conceptwelder.com/">Concept Welder</a></h1>
+       <h1 class="header-title"><a href="http://conceptwelder.com/" style="color:white;">Concept Welder</a></h1>
        <h5 class="header-sub-title">"Where new ideas are forged and brought to life"</h5>
     </header>
     <div class="container-fluid">
