--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,6 +96,12 @@
         max-height: fit-content;
         padding: 10px;
       }
+
+      .body-table-row {
+        border-width: medium;
+        border: solid;
+        border-color: gainsboro;
+      }
       
       /* Set black background color, white text and some padding */
       footer {
