--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,7 +94,7 @@
 
       .body-image {
         max-height: fit-content;
-        max-width: 100%
+        max-width: 100%;
         padding: 10px;
       }
 
