--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,6 +92,12 @@
         font-size: large;
       }
 
+      .center-title {
+        display: flex;
+        justify-content: center;
+        font-size: 24px;
+      }
+
       .body-image {
         max-height: fit-content;
         max-width: 100%;
