--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,6 +96,7 @@
         display: flex;
         justify-content: center;
         font-size: 24px;
+        padding-bottom: 25px;
       }
 
       .body-image {
