--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,18 @@
       <!--[if lt IE 8]>
       <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
       <![endif]-->
+
+  <!--     Google anaylitics -->
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZRY2DK0W83"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-ZRY2DK0W83');
+  </script>
+    
     <style>
       /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
       .row.content {height: 1500px}
