--- a/assets/2024-04-24/main.css
+++ b/assets/2024-04-24/main.css
@@ -33,13 +33,11 @@
 
 .img {
     max-width: 100%;
+    max-height: 100%;
     height: auto;
-    padding: 2%;
-    position: absolute;
-    top: 0;
-    bottom: 0;
+    width: auto;
     margin: auto;
-    padding-right: 5%;
+    padding: 5%;
 }
 
 .leaf-head {
