--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -116,6 +116,9 @@
         max-width: 100%;
         padding: 10px;
       }
+      .full-width-image {
+        max-width: 100%;
+      }
 
       .body-table-row {
         border-width: medium;
